objects/RICEFW_Inventory__c.object
<CustomObject>
    <description>Stores RICEFW inventory items which comprise AP250 deliverable.</description>
    <fields>
        <fullName>Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Complexity__c</fullName>
        <label>Complexity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Simple</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Complex</fullName>
                </value>
                <value>
                    <fullName>TBD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>New_Modified__c</fullName>
        <label>New / Modified</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Modify</fullName>
                </value>
                <value>
                    <fullName>TBD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Must Have</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>TBD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RICEFW_Autonumber__c</fullName>
        <label>RICEFW Autonumber</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>RICEFW_ID__c</fullName>
        <formula>Release_Acronym__c + &quot;.&quot; + RICEFW_Type_Acronym__c + &quot;.&quot; + RICEFW_Autonumber__c</formula>
        <inlineHelpText>Release + RICEFW Object + RICEFW #</inlineHelpText>
        <label>RICEFW ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RICEFW_Type_Acronym__c</fullName>
        <formula>IF(RecordType.DeveloperName = &quot;Reports&quot;, &quot;R&quot;, 
 IF(RecordType.DeveloperName = &quot;Interfaces&quot;, &quot;I&quot;,
  IF(RecordType.DeveloperName = &quot;Conversions&quot;, &quot;C&quot;,
   IF(RecordType.DeveloperName = &quot;Enhancements&quot;, &quot;E&quot;,
    IF(RecordType.DeveloperName = &quot;Application_Pages_Views&quot;, &quot;F&quot;,
     IF(RecordType.DeveloperName = &quot;Workflows&quot;, &quot;W&quot;, null))))))</formula>
        <label>RICEFW Type Acronym</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Release_Acronym__c</fullName>
        <formula>Release__r.Name</formula>
        <label>Release Acronym</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Release__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Release</label>
        <referenceTo>Release__c</referenceTo>
        <relationshipLabel>RICEFW Inventories</relationshipLabel>
        <relationshipName>RICEFW_Inventories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>System_Impacted__c</fullName>
        <label>System Impacted</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SFDC</fullName>
                </value>
                <value>
                    <fullName>SP</fullName>
                </value>
                <value>
                    <fullName>EAI</fullName>
                </value>
                <value>
                    <fullName>Data Hub</fullName>
                </value>
                <value>
                    <fullName>Alliance</fullName>
                </value>
                <value>
                    <fullName>Surround</fullName>
                </value>
                <value>
                    <fullName>Pricetool</fullName>
                </value>
                <value>
                    <fullName>STARS</fullName>
                </value>
                <value>
                    <fullName>VZW</fullName>
                </value>
                <value>
                    <fullName>CD</fullName>
                </value>
                <value>
                    <fullName>Apttus</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Report</fullName>
                </value>
                <value>
                    <fullName>Dashboard</fullName>
                </value>
                <value>
                    <fullName>Interface - Inbound</fullName>
                </value>
                <value>
                    <fullName>Interface - Outbound</fullName>
                </value>
                <value>
                    <fullName>Automatic Conversion</fullName>
                </value>
                <value>
                    <fullName>Manual Conversion</fullName>
                </value>
                <value>
                    <fullName>Enhancements</fullName>
                </value>
                <value>
                    <fullName>Application Pages</fullName>
                </value>
                <value>
                    <fullName>Views</fullName>
                </value>
                <value>
                    <fullName>Workflows</fullName>
                </value>
                <value>
                    <fullName>TBD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>RICEFW Inventory</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>RICEFW Inventory Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RICEFW Inventories</pluralLabel>
    <recordTypes>
        <fullName>Application_Pages_Views</fullName>
        <active>true</active>
        <label>Application Pages / Views</label>
    </recordTypes>
    <recordTypes>
        <fullName>Conversions</fullName>
        <active>true</active>
        <label>Conversions</label>
    </recordTypes>
    <recordTypes>
        <fullName>Enhancements</fullName>
        <active>true</active>
        <label>Enhancements</label>
    </recordTypes>
    <recordTypes>
        <fullName>Interfaces</fullName>
        <active>true</active>
        <label>Interfaces</label>
    </recordTypes>
    <recordTypes>
        <fullName>Reports</fullName>
        <active>true</active>
        <label>Reports</label>
    </recordTypes>
    <recordTypes>
        <fullName>Workflow</fullName>
        <active>true</active>
        <label>Workflow</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>